fixing alignment on rps game

--- a/src/styles/Snake.css
+++ b/src/styles/Snake.css
@@ -88,7 +88,7 @@
     font-size: 40px;
     color: white;
   }
-  h2 {
+  .snake-header2 {
     font-family: 'Press Start 2P', cursive;
     font-size: 20px;
     color: gold;
